[workspace]
members = [
    "apps/handcraft",
    "apps/gesha",
    "apps/gesha-verify",
    "examples/v3_0",
]
resolver = "2"

[workspace.dependencies]
openapi-types = { version = "0.0.1", path = "libs/openapi-types" }
gesha-core = { version = "0.0.1", path = "libs/gesha-core" }
gesha-rust-types = { version = "0.0.1", path = "libs/targets/gesha-rust-types" }

async-trait = "0.1.77"
clap = { version = "4.5.30", features = ["derive"] }
heck = "0.5.0"
indexmap = "2.7.1"
opentelemetry = { version = "0.28.0", default-features = false, features = ["trace", "metrics"] }
pretty_assertions = "1.4.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
tokio = { version = "1.35.1", features = ["full"] }
tracing = "0.1"
