[workspace]
members = [
    "apps/handcraft",
    "apps/gesha",
    "apps/gesha-verify",
    "examples/v3_0",
]
resolver = "2"

[workspace.dependencies]
openapi-types = { version = "0.0.7", path = "libs/openapi-types" }
gesha-core = { version = "0.0.10", path = "libs/gesha-core" }
gesha-macros = { version = "0.0.2", path = "libs/gesha-macros" }
gesha-rust-shapes = { version = "0.0.10", path = "libs/targets/gesha-rust-shapes" }
gesha-rust-types = { version = "0.0.4", path = "libs/targets/gesha-rust-types" }

async-trait = "0.1.88"
clap = { version = "4.5.34", features = ["derive"] }
heck = "0.5.0"
indexmap = "2.8.0"
opentelemetry = { version = "0.29.0", default-features = false, features = ["trace", "metrics"] }
pretty_assertions = "1.4.1"
rstest = "0.25.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
syn = "2.0.100"
tokio = { version = "1.44.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
