[workspace]
members = [
    "apps/handcraft",
    "apps/gesha",
    "apps/gesha-verify",
    "examples/v3_0",
]
resolver = "2"

[workspace.dependencies]
gesha-collections = { version = "0.0.2", path = "libs/gesha-collections" }
gesha-core = { version = "0.0.12", path = "libs/gesha-core" }
gesha-macros = { version = "0.0.3", path = "libs/gesha-macros" }
gesha-rust-shapes = { version = "0.0.12", path = "libs/targets/gesha-rust-shapes" }
gesha-rust-types = { version = "0.0.6", path = "libs/targets/gesha-rust-types" }
openapi-types = { version = "0.0.9", path = "libs/openapi-types" }

async-trait = "0.1.88"
clap = { version = "4.5.36", features = ["derive"] }
heck = "0.5.0"
indexmap = "2.9.0"
opentelemetry = { version = "0.29.1", default-features = false, features = ["trace", "metrics"] }
pretty_assertions = "1.4.1"
rstest = "0.25.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
syn = "2.0.100"
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
