[package]
name = "gesha-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gesha-core = { path = "../../libs/gesha-core" }
gesha-rust-types = { path = "../../libs/targets/gesha-rust-types" }
openapi-types = { path = "../../libs/openapi-types" }

clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
