[package]
name = "gesha-verify"
version = "0.0.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gesha-core = { workspace = true, features = ["testing"] }
gesha-rust-shapes = { workspace = true, features = ["testing"] }

clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
ctor = "0.4.0"
pretty_assertions = { workspace = true }
