[package]
name = "gesha"
version = "0.0.7"
description = "Generates code based on OpenAPI specs"
repository = "https://github.com/x7c1/gesha/tree/main/apps/gesha"
license = "MIT"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gesha-core = { workspace = true }
gesha-rust-shapes = { workspace = true }

clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
