[package]
name = "gesha"
version = "0.0.12"
description = "Generates code based on OpenAPI specs"
repository = "https://github.com/x7c1/gesha"
readme = "../../README.md"
license = "MIT"
edition = "2024"
keywords = [
    "openapi",
    "codegen",
    "generator",
]
categories = [
    "command-line-utilities",
    "development-tools",
    "web-programming",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gesha-core = { workspace = true }
gesha-rust-shapes = { workspace = true }

clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
