[package]
name = "handcraft"
version = "0.1.0"
edition = "2018"

[lib]
name = "handcraft"
path = "src/lib.rs"

[[bin]]
name = "handcraft-app"
path = "src/bin.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
handcraft-server = { path = "../../libs/handcraft-server" }
handcraft-server-derive = { path = "../../libs/handcraft-server-derive" }
handcraft-models = { path = "../../libs/handcraft-models" }
actix-web = "3.3.2"
async-trait = "0.1.51"
