[package]
name = "handcraft"
version = "0.1.0"
edition = "2021"

[lib]
name = "handcraft"
path = "src/lib.rs"

[[bin]]
name = "handcraft-app"
path = "src/bin.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
handcraft-server = { path = "../../libs/handcraft/handcraft-server" }
handcraft-server-derive = { path = "../../libs/handcraft/handcraft-server-derive" }
handcraft-models = { path = "../../libs/handcraft/handcraft-models" }
actix-web = "4.4.1"
async-trait = { workspace = true }
futures-util = "0.3"
