[package]
name = "sample"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sample-client = { path = "../../libs/sample-client" }
sample-client-macros = { path = "../../libs/sample-client-macros" }
actix-web = "3"
async-trait = "0.1.51"
