[package]
name = "sample"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sample-server = { path = "../../libs/sample-server" }
sample-server-derive = { path = "../../libs/sample-server-derive" }
actix-web = "3"
async-trait = "0.1.51"
serde = "1.0.130"