[package]
name = "examples_v3_0"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0.81"

[dev-dependencies]
pretty_assertions = "1.3.0"
