[package]
name = "gesha-core"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openapi-types = { path = "../../libs/openapi-types" }

chrono = "0.4.31"
console = "0.15.8"
futures = "0.3"
nu-ansi-term = "0.50.0"
opentelemetry = { workspace = true }
opentelemetry-otlp = { version = "0.28.0", features = ["metrics"] }
opentelemetry_sdk = { version = "0.28.0", features = ["rt-tokio"] }
opentelemetry-semantic-conventions = "0.28.0"
similar = "2.4.0"
tokio = { workspace = true }
tracing = { workspace = true }
tracing-opentelemetry = { version = "0.29", features = ["metrics"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
