[package]
name = "gesha-core"
version = "0.0.4"
description = "Core functionality for Gesha project"
repository = "https://github.com/x7c1/gesha/tree/main/libs/gesha-core"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
testing = []

[dependencies]
openapi-types = { workspace = true }

chrono = "0.4.31"
console = "0.15.8"
futures = "0.3"
nu-ansi-term = "0.50.0"
opentelemetry = { workspace = true }
opentelemetry-otlp = { version = "0.28.0", features = ["metrics", "grpc-tonic"] }
opentelemetry_sdk = { version = "0.28.0", features = ["rt-tokio"] }
similar = "2.4.0"
tokio = { workspace = true }
tracing = { workspace = true }
tracing-opentelemetry = { version = "0.29", features = ["metrics"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
