[package]
name = "gesha-core"
version = "0.0.10"
description = "Core functionality for Gesha project"
repository = "https://github.com/x7c1/gesha/tree/main/libs/gesha-core"
license = "MIT"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
testing = []

[dependencies]
openapi-types = { workspace = true }
gesha-collections = { workspace = true }

chrono = "0.4.40"
console = "0.15.11"
futures = "0.3.31"
nu-ansi-term = "0.50.1"
opentelemetry = { workspace = true }
opentelemetry-otlp = { version = "0.29.0", features = ["metrics", "grpc-tonic"] }
opentelemetry_sdk = { version = "0.29.0", features = ["rt-tokio"] }
similar = "2.7.0"
tokio = { workspace = true }
tracing = { workspace = true }
tracing-opentelemetry = { version = "0.30.0", features = ["metrics"] }
tracing-subscriber = { workspace = true }
