[package]
name = "openapi-types"
version = "0.0.3"
description = "Types for OpenAPI"
repository = "https://github.com/x7c1/gesha/tree/main/libs/openapi-types"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = { workspace = true }
heck = { workspace = true }
yaml-rust = "0.4.5"
