[package]
name = "handcraft-models"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
actix-multipart = "0.4.0"
futures-util = "0.3"
serde = { version = "1.0.139", features = ["derive"] }
serde_urlencoded = "0.7.0"
serde_json = "1.0.70"
sanitize-filename = "0.3.0"

[dev-dependencies]
serde_json = "1.0.68"
