[package]
name = "handcraft-models"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
actix-multipart = "0.4.0"
futures-util = "0.3"
serde = { workspace = true }
serde_urlencoded = "0.7.1"
serde_json = { workspace = true }
sanitize-filename = "0.4.0"

[dev-dependencies]
serde_json = { workspace = true }
