[package]
name = "handcraft-server-derive"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = "1.0.35"
proc-macro2 = "1.0"

[dev-dependencies]
pretty_assertions = { workspace = true }
