[package]
name = "handcraft-server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
handcraft-models = { path = "../handcraft-models" }
actix-web = "4.1.0"
async-trait = "0.1.51"
serde = { version = "1.0.139", features = ["derive"] }
