[package]
name = "handcraft-server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
handcraft-models = { path = "../handcraft-models" }
actix-web = "4.2.1"
async-trait = "0.1.60"
serde = { version = "1.0.151", features = ["derive"] }
