[package]
name = "handcraft-server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
handcraft-models = { path = "../handcraft-models" }
actix-web = "4.3.1"
async-trait = { workspace = true }
serde = { workspace = true }
