[package]
name = "gesha-rust-shapes"
version = "0.0.1"
edition = "2021"

[features]
testing = ["gesha-core/testing"]

[dependencies]
gesha-core = { path = "../../gesha-core" }
gesha-rust-types = { path = "../gesha-rust-types" }
openapi-types = { workspace = true }

heck = { workspace = true }
indexmap = { workspace = true }
