[package]
name = "gesha-rust-shapes"
version = "0.0.4"
description = "Rust types for intermediate representation in the Gesha project"
repository = "https://github.com/x7c1/gesha/tree/main/libs/targets/gesha-rust-types"
license = "MIT"
edition = "2021"

[features]
testing = ["gesha-core/testing"]

[dependencies]
gesha-core = { workspace = true }
gesha-rust-types = { workspace = true }
openapi-types = { workspace = true }

heck = { workspace = true }
indexmap = { workspace = true }
