[package]
name = "gesha-rust-types"
version = "0.0.3"
description = "Rust types for Gesha proejct"
repository = "https://github.com/x7c1/gesha/tree/main/libs/targets/gesha-rust-types"
license = "MIT"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heck = { workspace = true }
indexmap = { workspace = true }
syn = { workspace = true }
